2020-03-28: use-psycopg2.py

	* Check connection with PostgreSQL on Docker

2018-03-24: lucene-tutorial

	* Lucene Tutorial in Scala

2018-01-13: ansible-role-ssh_config

	* Ansible role to generate ssh config file

2017-09-24: ansible-neo4j

	* Ansible playbook for Neo4j

2017-08-21: ansible-jupyternb

	* Ansible Playbook to run Jupyter notebook

2016-07-03: dsnb-sql

	* Data Science Notebook plus SQL extension

2014-12-14: docker-python34-ipython

	* IPython Docker image on top of Python 3.4

2014-10-11: django-access-dashboard [deleted]

	* Dashboard for Apache Access Log based on Django

2013-10-21: jpgridmap

	* Japanese Grid Map

2013-08-02: parameter-composer

	* HTTP request parameter composer

2013-06-17: simple-doc-search [deleted]

	* Simple document search with Solr on DotCloud

2013-04-12: tabular-simple.py [deleted]

	* 行形式のデータを表形式に変換する。

2012-11-05: date-expand.py

	* 日付文字列を展開する。

2012-10-04: spring-apiproxy [deleted]

	* Spring API Proxy by Java 7

2012-10-01: SConstruct-sphinx, wscript-sphinx

	* Sphinx のビルドシステム置き換え

2012-06-19: httpget.groovy

	* groovy で Google 検索 API を使ってみる。

2012-02-18: sabae-landscape.py [deleted]

	* 鯖江市の百景の XML データを CSV に変換する。

2012-01-21: wikipedia-data-config.xml wikipedia-schema.xml wikipedia-solrconfig.xml

	* Wikipedia のデータを Solr にインポートする設定ファイル。

2011-12-05: simple-usage-fileapi.html

	* ブラウザの File API を使ってみる。

2011-11-17: buzz-slide.html

	* Google Buzz からエクスポートした HTML のスライドショー。

2011-10-21: ec2setenv.sh nodejs-setenv.sh

	* EC2 と Node.JS のアクティベーションスクリプト。

2011-10-17: fnameconv.py

	* ファイル名を日付文字列に変換する。

2011-10-10: fizzbuzz.py

	* Python で fizzbuzz

2011-10-02: solr-search.html,solr-search.js
	* Solr の簡易 HTML コンソール。

2011-09-20: javascriptmvc-update.sh
	* JavaScriptMVC の submodule を更新する。

2011-08-27: simple-usage-raphael-chart.html,simple-usage-raphael-chart.js
	* Raphael を使ってチャートを表示する。

2011-08-21: wscript-pep8
	* Waf から pep8 を使ってみる。

2011-08-16: wscript-solr
	* Waf から Solr を使ってみる。
